<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.krystan.mypendelbuch.MainActivity">

    <ToggleButton
        android:id="@+id/ToggleButtonDefaultCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ButtonDefaultHome"
        android:layout_below="@+id/ButtonDefaultHome"
        android:checked="true"
        android:text="ToggleButton"
        android:textAllCaps="false"
        android:textOff="@string/StringNein"
        android:textOn="@string/StringJa" />

    <TextView
        android:text="@string/StringDefaultWay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextDefaultWay"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/StringPrivateCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextDefaultCar"
        android:layout_alignBaseline="@+id/ToggleButtonDefaultCar"
        android:layout_alignBottom="@+id/ToggleButtonDefaultCar"
        android:layout_alignStart="@+id/TextDefaultWay" />

    <Button
        android:text="@string/StringComuteWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonWorkDefault"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:visibility="visible"
        android:onClick="handleButtonClick"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/TextDefaultWay"
        android:layout_alignStart="@+id/TextDefaultCar" />

    <Button
        android:id="@+id/ButtonDefaultHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/ButtonWorkDefault"
        android:onClick="handleButtonClick"
        android:text="@string/StringCommuteHome"
        android:textAllCaps="false"
        android:visibility="visible" />

    <TextView
        android:text="@string/StringAltWay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/TextAltWay"
        android:layout_below="@+id/ToggleButtonDefaultCar"
        android:layout_alignStart="@+id/TextDefaultCar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/StringRefuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonRefuel"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:visibility="visible"
        android:onClick="handleButtonClick"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/ButtonAlternative"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/ButtonAlternative" />

    <Button
        android:id="@+id/ButtonExportCommune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="handleButtonClick"
        android:text="@string/StringExportCommune"
        android:textAllCaps="false"
        android:visibility="visible"
        android:layout_below="@+id/ButtonRefuel"
        android:layout_alignEnd="@+id/ButtonWorkDefault" />

    <Button
        android:id="@+id/ButtonExportRefuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="handleButtonClick"
        android:text="@string/StringExportRefuel"
        android:textAllCaps="false"
        android:layout_alignBaseline="@+id/ButtonExportCommune"
        android:layout_alignBottom="@+id/ButtonExportCommune"
        android:layout_alignStart="@+id/ToggleButtonDefaultCar"
        android:layout_marginStart="12dp" />

    <Button
        android:id="@+id/ButtonAlternative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/TextAltWay"
        android:layout_centerVertical="true"
        android:onClick="handleButtonClick"
        android:text="@string/StringAltWay"
        android:textAllCaps="false" />

</RelativeLayout>
